--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
                 <div class="log-in-cell"><a href="#">Accedi</a></div>
             </div>
         </nav>
+        <section id="jumbotron">
+            <div class="content w-40 ">
+                <h1>Il tuo posto per parlare</h1>
+                <p> 
+                    Che tu faccia parte di un club scolastico, 
+                    gruppo di gamer,comunita' artistica o semplicemente di un piccolo gruppo di amici 
+                    che vuole passare del tempo assieme, Discord rende piu facile chiaccherare ogni giorno e 
+                    ritrovarsi piu spesso.  
+                </p>
+                <div class="download-cell il-block">
+                    <i class="fa-solid fa-arrow-down-long"></i>
+                    <a href="#">
+                        Scarica per il tuo Mac
+                    </a>
+                </div>
+                <div class="open il-block">
+                    <a href="#">
+                    Apri Discord nel tuo Browser
+                    </a>
+                </div>
+
+            </div>
+        </section>
     </header>
     
 </body>
