--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </nav>
         <section id="jumbotron">
-            <div class="content w-40 ">
+            <div class="content w-40 d-flex">
                 <h1>Il tuo posto per parlare</h1>
                 <p> 
                     Che tu faccia parte di un club scolastico, 
@@ -34,21 +34,32 @@
                     che vuole passare del tempo assieme, Discord rende piu facile chiaccherare ogni giorno e 
                     ritrovarsi piu spesso.  
                 </p>
-                <div class="download-cell il-block">
-                    <i class="fa-solid fa-arrow-down-long"></i>
-                    <a href="#">
-                        Scarica per il tuo Mac
-                    </a>
+                <div class="buttons">
+                    <div class="download-cell il-block">
+                        <i class="fa-solid fa-arrow-down-long"></i>
+                        <a href="#">
+                            Scarica per il tuo Mac
+                        </a>
+                    </div>
+                    <div class="open il-block">
+                        <a href="#">
+                            Apri Discord nel tuo Browser
+                        </a>
+                    </div>
                 </div>
-                <div class="open il-block">
-                    <a href="#">
-                    Apri Discord nel tuo Browser
-                    </a>
-                </div>
-
+                    
             </div>
         </section>
     </header>
+    <section class="bg-white d-flex p-70 container">
+        <div class="w-60 group-col">
+            <img src="img/img/item1.svg" alt="item1">
+        </div>
+        <div class="w-40 container p-70">
+            <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+        </div>
+    </section>
+
     
 </body>
 </html>
