--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="nav-menu w-50 d-flex">
                 <a href="#">Scarica</a>
-                <a href="#">Perche Discord</a>
+                <a href="#">Perch&egrave; Discord</a>
                 <a href="#">Nitro</a>
                 <a href="#">Sicurezza</a>
                 <a href="#">Assistenza</a>
@@ -51,15 +51,66 @@
             </div>
         </section>
     </header>
-    <section class="bg-white d-flex p-70 container">
-        <div class="w-60 group-col">
-            <img src="img/img/item1.svg" alt="item1">
-        </div>
-        <div class="w-40 container p-70">
-            <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-        </div>
-    </section>
+    <main> 
+        <!-- prima sezione della pagina  -->
+        <section class="bg-white ">
+            <div class="d-flex p-70 container">
+                <div class="w-60 img-col">
+                    <img src="img/img/item1.svg" alt="item1">
+                </div>
+                <div class="w-40 container p-70 d-flex info">
+                    <h3>Un luogo a invito con tutto lo spazio necessario per parlare</h3>
+                    <p>
+                        I server Discord sono organizzati in canali telematici in cui puo collaborare,
+                        condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="bg-gray ">
+            <div class="d-flex p-70 container">
+                <div class="w-40  p-70 d-flex info">
+                    <h3>Dove trovarsi &egrave; facile </h3>
+                    <p>
+                       Mettiti comodo in un canale vocale quando hai tempo. 
+                       Gli amici nel tuo server possono vedere che sei l&igrave; e unirsi istantaneamente senza dover chiamare. 
+                    </p>
+                </div>
+                <div class="w-60 img-col">
+                    <img src="img/img/item2.svg" alt="item2">
+                </div>
+            </div>
+        </section>
+        <section class="bg-white ">
+            <div class="d-flex p-70 container">
+                <div class="w-60 img-col">
+                    <img src="img/img/item3.svg" alt="item1">
+                </div>
+                <div class="w-40 container p-70 d-flex info">
+                    <h3>Da pochi ad un Fandom</h3>
+                    <p>
+                        Dai inizio ad una comunity con strumenti di moderazione e accesso ai membri personalizzabile.
+                        Concedi ai membri poteri speciali, crea canali privati e molto altro ancora.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- sezione piu grande  -->
+        <section class="bg-gray">
+            <div class="container full-col">
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza vi faranno sentire come se foste tutti nella stessa stanza.Fai ciao in video ,
+                    guarda gli amici giocare in streaming,o riunitevi in una sessione di disegno con la condivisione schermo.
+                </p>
+                <img class="big-img"src="img/img/item4-big.svg" alt="big-img">
+            </div>
+        </section>
+
+    </main>
+
 
     
 </body>
 </html>
+                    
+
