--- a/index.html
+++ b/index.html
@@ -107,10 +107,123 @@
         </section>
 
     </main>
+    <footer>
+        <div class="container d-flex pie-di-pagina ">
+            <div class="w-30 motto">
+                <h2>Il tuo posto per parlare</h2>
+                <img src="img/img/ita.png" alt="ita"class="flag">
+                <div class="language">
+                    <span >Italiano</span><span>&#8964;</span><br>
+                </div>
+                <div class="icons d-flex">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+            </div>
+            <div class=" w-70 d-flex  top-footer">
+                <ul>
+                    <li>Prodotto</li>
+                    <li>
+                        <a href="#">Scarica</a>
+                    </li>
+                    <li>
+                        <a href="#">Perch&egrave; Discord</a>
+                    </li>
+                    <li>
+                        <a href="#">Nitro</a>
+                    </li>
+                    <li>
+                        <a href="#">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a href="#">Assistenza</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Prodotto</li>
+                    <li>
+                        <a href="#">Chi Siamo</a>
+                    </li>
+                    <li>
+                        <a href="#">Lavora con Noi</a>
+                    </li>
+                    <li>
+                        <a href="#">Marchio</a>
+                    </li>
+                    <li>
+                        <a href="#">Redazione</a>
+                    </li>
+                    <li>
+                        <a href="#">Negozio</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Prodotto</li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>Prodotto</li>
+                    <li>
+                        <a href="#">Chi Siamo</a>
+                    </li>
+                    <li>
+                        <a href="#">Lavora con Noi</a>
+                    </li>
+                    <li>
+                        <a href="#">Marchio</a>
+                    </li>
+                    <li>
+                        <a href="#">Redazione</a>
+                    </li>
+                    <li>
+                        <a href="#">Negozio</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Prodotto</li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                    <li>
+                        <a href="#">Prodotto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="d-flex bot-footer container">
+            <img src="img/img/logo.svg" alt="logo">
+            <button>Registrati</button>
+        </div>
+    </footer>
+</body>
+</html>
+
 
 
     
-</body>
-</html>
                     
+
 
